tests/rosetta/out/Zig/bifid-cipher.error
zig build: exit status 1
/tmp/bifid-cipher.zig:61:15: error: use of undeclared identifier 'upper'
/tmp/bifid-cipher.zig:110:9: error: local variable is never mutated
/tmp/bifid-cipher.zig:110:9: note: consider using 'const'
